Part 1 of executeMove refactoring